<package format="2">
    <name>rviz_plugins</name>
    <description>

        Additional plugins for rviz

    </description>
    <version>0.1.0</version>
    <maintainer email="eeshaojie@ust.hk">Shaojie Shen</maintainer>
    <maintainer email="wwuar@connect.ust.hk">william.wu</maintainer>
    <license>LGPLv3</license>
    <url>http://ros.org/wiki/rviz_plugins</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rviz_common</depend>
    <depend>rclcpp</depend>
    <depend>multi_map_server</depend>
    <depend>qtbase5-dev</depend>

    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
